# cobalt-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  ci-mode.md  configuration.md  datasets.md  evaluators.md  mcp.md
docs/getting-started/: first-experiment.md  installation.md  quickstart.md  understanding-results.md
src/cobalt/: __init__.py  ci.py  config.py  dataset.py  evaluator.py  experiment.py  types.py
src/cobalt/cli/: main.py
src/cobalt/dashboard/: server.py
src/cobalt/dashboard/static/: index.html
src/cobalt/evaluators/: __init__.py  function.py  llm_judge.py  similarity.py
src/cobalt/mcp/: server.py
src/cobalt/storage/: db.py  results.py
src/cobalt/utils/: cost.py  stats.py  template.py
tests/: test_dashboard.py  test_dataset.py  test_evaluators.py  test_experiment.py  test_mcp.py  test_utils.py
