[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basalt-ai-cobalt"
version = "0.2.2"
description = "Unit testing for AI Agents — Python port of Cobalt"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "testing", "llm", "evaluation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "openai>=1.0",
    "anthropic>=0.25",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.scripts]
cobalt = "cobalt.cli.main:main"

[project.urls]
Homepage = "https://github.com/basalt-ai/cobalt-python"
"TypeScript version" = "https://github.com/basalt-ai/cobalt"
Documentation = "https://github.com/basalt-ai/cobalt-python#readme"
Issues = "https://github.com/basalt-ai/cobalt-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cobalt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
